--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ body {
   padding-block: 24px;
   min-height: 100vh;
 }
-
 h1,
 h2,
 h3 {
@@ -287,6 +286,45 @@ picture.flush-right {
   display: grid;
   place-items: center;
 }
+
+ul li a .icon {
+  position: relative;
+  color: #262626;
+  transition: .5s;
+  z-index: 3;
+}
+
+ul li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+ul li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: .5s;
+  z-index: 2;
+}
+.feature .icon:hover{
+  /* text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+transition: all 0.4s ease 0s; */
+
+
+-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+
+}
+
+
 
 .feature .icon img {
   width: 2rem;
