--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
   --space-sm: 24px;
   --space-med: 64px;
   --space-lg: 120px;
+  --bluecol:#4e69ff;
 }
 
 *,
@@ -51,6 +52,7 @@ body {
   margin: 0;
   padding-block: 24px;
   min-height: 100vh;
+  background-color:black;
 }
 h1,
 h2,
@@ -65,8 +67,36 @@ h1 {
   font-size: clamp(3rem, 2.111111111111111rem + 1.8518518518518516vw, 3.5rem);
   line-height: 1;
   max-width: 18ch;
+  animation: load 1s ease forwards ;
+  transform: scale(0);
+
+}
+img.mine{
+  animation: pop 1s ease forwards;
+
+}
+@keyframes pop{
+  0%{
+    transform: translateX(100%);
+  }
+  80%{
+    transform: translateX(-3%);
+  }
+  100%{
+    transform: translateX(0%);
+  }
+  
 }
 
+@keyframes load{
+  0%{
+    transform: scale(0);
+  }
+  100%{
+    transform: scale(1);
+  }
+  
+}
 h2 {
   font-size: 2rem;
 }
@@ -109,6 +139,8 @@ img {
   max-width: 100%;
   height: auto;
   object-fit: cover;
+  
+  filter: drop-shadow(0 0 15px var(--orange-lt));
 }
 
 button {
@@ -129,6 +161,7 @@ button:hover {
   border-radius: 8px;
   transition: 150ms ease-in-out;
   transition-property: background-color, color;
+  animation: load 1s ease forwards ;
 }
 
 .button.blue {
@@ -317,7 +350,7 @@ ul li a:before {
 transition: all 0.4s ease 0s; */
 
 
--webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+ -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 transition: all 0.3s ease 0s;
 cursor: pointer;
@@ -492,5 +525,5 @@ footer > p {
 
 
 
-
+  
 
