--- a/style.css
+++ b/style.css
@@ -87,6 +87,18 @@ img.mine{
   }
   
 }
+@keyframes go{
+  0%{
+    transform: translateX(-100%);
+  }
+  80%{
+    transform: translateX(1%);
+  }
+  100%{
+    transform: translateX(0%);
+  }
+  
+}
 
 @keyframes load{
   0%{
@@ -161,7 +173,7 @@ button:hover {
   border-radius: 8px;
   transition: 150ms ease-in-out;
   transition-property: background-color, color;
-  animation: load 1s ease forwards ;
+  animation: go 1s ease forwards ;
 }
 
 .button.blue {
