--- a/style.css
+++ b/style.css
@@ -173,12 +173,13 @@ button:hover {
   border-radius: 8px;
   transition: 150ms ease-in-out;
   transition-property: background-color, color;
-  animation: go 1s ease forwards ;
+  
 }
 
 .button.blue {
   background-color: var(--gray-lt);
   color: var(--blue);
+  animation: pop 1s ease forwards ;
 }
 
 .button.blue:hover {
@@ -190,6 +191,7 @@ button:hover {
   background-color: var(--orange);
   color: var(--white);
   margin-top: 8px;
+  animation: go 1s ease forwards ;
 }
 
 .button.orange:hover {
