--- a/style.css
+++ b/style.css
@@ -69,12 +69,12 @@ body {
   scroll-behavior: smooth;
   scroll-padding-block: var(--bluecol);
   background-color:black;
-  overflow:hidden ;
+ 
 }
 h1,
 h2,
 h3 {
-  margin: 0;
+  margin: 0;   
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -387,7 +387,6 @@ ul li a:before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #f00;
   transition: .5s;
   z-index: 2;
 }
@@ -417,12 +416,12 @@ cursor: pointer;
   margin-block-end: 24px;
 }
 
-footer {
+.brand {
   text-align: center;
   padding-block-start: var(--space-lg);
 }
 
-footer > p {
+.brand > p.two {
   max-width: none;
 }
 
@@ -569,4 +568,72 @@ footer > p {
   .feature:nth-child(1) {
     grid-column-start: 2;
   }   
+}  
+
+
+
+/* footer section  */
+
+
+ul {
+  display: inline-grid;
+  grid-auto-flow: row;
+  grid-gap: 20px;
+  justify-items: center;
+  margin: auto;
+  text-decoration: none;
+}
+
+@media (width > 31.25em) {
+  ul { 
+    grid-auto-flow: column;
+  }
+}
+
+
+a.links {
+  color: white;
+  text-decoration: none;
+  margin: 3rem;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+a.links:hover {
+  text-shadow: 0 0 25px rgb(226, 45, 45);
+  
+}
+
+li:last-child {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+li:hover ~ li p.para{
+  animation: wave 2s infinite;
+}
+p.para{
+   font-size: 2rem;
+}
+
+.footer{
+  display: flex;
+  height: 30vh;
+  width: 100%;
+  background-color: var(--blue);
+  line-height: 1.3;
+  font-family: 'Poppins', sans-serif;
+  
+}
+
+@keyframes wave {
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(20deg);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
 }
