--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
   --space-med: 64px;
   --space-lg: 120px;
   --bluecol:#4e69ff;
+  --pink:#e28cb3;
 }
 
 /* scrollbar  */
@@ -81,6 +82,7 @@ h3 {
 
 h1 {
   font-size: 3rem;
+  color:var(--pink) ;
   font-size: clamp(3rem, 2.111111111111111rem + 1.8518518518518516vw, 3.5rem);
   line-height: 1;
   max-width: 18ch;
